--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生管理-班级管理</title>
+  <title>教师管理-销售数据</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -68,71 +68,54 @@
         <nav data-sidebar-anyclick-close="" class="sidebar">
           <ul class="nav">
             <li class="nav-heading ">
-              <span>欢迎来到智厢逢教师后台</span>
+              <span>欢迎来到智厢逢校长后台</span>
             </li>
             <li class=" ">
-              <a href="#studyreport" title="学习报告" data-toggle="collapse">
+              <a href="datastatistics.html" title="数据统计">
                 <em class="icon-speedometer"></em>
-                <span>学习报告</span>
+                <span>数据统计</span>
               </a>
-              <ul id="studyreport" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">学习报告</li>
-                <li class=" ">
-                  <a href="studyreport_overall.html" title="总体报告">
-                    <span>总体报告</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="studyreport_all.html" title="全部报告">
-                    <span>全部报告</span>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class=" ">
-              <a href="#coursemanagement" title="课程管理" data-toggle="collapse">
-                <em class="icon-graduation"></em>
-                <span>课程管理</span>
+              <a href="salesdata.html" title="销售数据">
+                <em class="icon-bag"></em>
+                <span>销售数据</span>
               </a>
-              <ul id="coursemanagement" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">课程管理</li>
+            </li>
+            <li class=" ">
+              <a href="#teachermanagement" title="教师管理" data-toggle="collapse">
+                <em class="icon-people"></em>
+                <span>教师管理</span>
+              </a>
+              <ul id="teachermanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">教师管理</li>
                 <li class=" ">
-                  <a href="coursemanagement_class.html" title="班级课程">
-                    <span>班级课程</span>
+                  <a href="teachermanagement_list.html" title="教师列表">
+                    <span>教师列表</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="coursemanagement_task.html" title="学习任务">
-                    <span>学习任务</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="coursemanagement_mode.html" title="复习模式">
-                    <span>复习模式</span>
+                  <a href="teachermanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
                   </a>
                 </li>
               </ul>
             </li>
             <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
-                <em class="icon-people"></em>
+                <em class="icon-graduation"></em>
                 <span>学生管理</span>
               </a>
               <ul id="studentmanagement" class="nav sidebar-subnav collapse">
                 <li class="sidebar-subnav-header">学生管理</li>
                 <li class=" ">
-                  <a href="studentmanagement_list.html" title="学生列表">
-                    <span>学生列表</span>
+                  <a href="studentmanagement_unallocated.html" title="未分配学生列表">
+                    <span>未分配学生列表</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="studentmanagement_class.html" title="班级管理">
-                    <span>班级管理</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="studentmanagement_coin.html" title="学币管理">
-                    <span>学币管理</span>
+                  <a href="studentmanagement_allocated.html" title="已分配学生列表">
+                    <span>已分配学生列表</span>
                   </a>
                 </li>
                 <li class=" ">
@@ -143,29 +126,23 @@
               </ul>
             </li>
             <li class=" ">
-              <a href="#exchangemanagement" title="学生兑换管理" data-toggle="collapse">
+              <a href="#mallmanagement" title="商城管理" data-toggle="collapse">
                 <em class="icon-present"></em>
-                <span>学生兑换管理</span>
+                <span>商城管理</span>
               </a>
-              <ul id="exchangemanagement" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">学生兑换管理</li>
+              <ul id="mallmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">商城管理</li>
                 <li class=" ">
-                  <a href="exchangemanagement_not.html" title="未兑换">
-                    <span>未兑换</span>
+                  <a href="mallmanagement_commodity.html" title="商品管理">
+                    <span>商品管理</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="exchangemanagement_has.html" title="已兑换">
-                    <span>已兑换</span>
+                  <a href="mallmanagement_exchange.html" title="学生兑换管理">
+                    <span>学生兑换管理</span>
                   </a>
                 </li>
               </ul>
-            </li>
-            <li class=" ">
-              <a href="mall.html" title="奖励商城">
-                <em class="icon-basket"></em>
-                <span>奖励商城</span>
-              </a>
             </li>
           </ul>
         </nav>
@@ -178,7 +155,7 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          班级管理
+          销售数据
         </div>
         <div class="row">
           <div class="col-xs-12">
