--- a/src/html/salesdata_info.html
+++ b/src/html/salesdata_info.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生管理-学员充值</title>
+  <title>销售数据-余额明细</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
 
 </head>
 
@@ -59,6 +60,12 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
+
+
+
+
 
 
     <!-- build:sidebar -->
@@ -151,26 +158,160 @@
     <!-- endbuild -->
 
 
+
+
+
+
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          学员充值
+          【X月】的余额明细
+          <ol class="breadcrumb">
+            <li><a href="#">销售数据</a></li>
+            <li class="active">余额明细</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">选择班级：</label>
+                      <div class="col-sm-8">
+                        <select name="" id="" class="form-control">
+                          <option value="">全部</option>
+                          <option value="1">班级1</option>
+                          <option value="2">班级2</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">学生手机：</label>
+                      <div class="col-sm-8">
+                        <input type="tel" name="" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-sm-1">
+                      <button type="button" class="btn btn-primary">搜索</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="" class="table table-bordered table-hover">
+                    <thead>
+                      <tr>
+                        <th>学生手机</th>
+                        <th>姓名</th>
+                        <th>总学习效率</th>
+                        <th>最后一天学习效率</th>
+                        <th>连续未学</th>
+                        <th>学生总积分</th>
+                        <th>总学习天数</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>18000000000</td>
+                        <td>名字名字</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>5天</td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>18000000000</td>
+                        <td>名字名字</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>5天</td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>18000000000</td>
+                        <td>名字名字</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>52%（01:13:59/02:22:05）</td>
+                        <td>5天</td>
+                        <td>500</td>
+                        <td>500</td>
+                        <td>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
+                <!-- endbuild -->
+
+
+
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
+
+
+
+
+
 
 
   </div>
@@ -186,6 +327,12 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
+
+
+
+
 
 
 </body>
