--- a/src/html/grammar_unit.html
+++ b/src/html/grammar_unit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生兑换管理-已兑换</title>
+  <title>搞定语法-单元</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -68,104 +68,134 @@
         <nav data-sidebar-anyclick-close="" class="sidebar">
           <ul class="nav">
             <li class="nav-heading ">
-              <span>欢迎来到智厢逢教师后台</span>
+              <span>课程管理</span>
             </li>
             <li class=" ">
-              <a href="#studyreport" title="学习报告" data-toggle="collapse">
-                <em class="icon-speedometer"></em>
-                <span>学习报告</span>
+              <a href="synchronize.html" title="同步课程">
+                <em class="icon-refresh"></em>
+                <span>同步课程</span>
               </a>
-              <ul id="studyreport" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">学习报告</li>
+            </li>
+            <li class=" ">
+              <a href="grammar.html" title="搞定语法">
+                <em class="icon-book-open"></em>
+                <span>搞定语法</span>
+              </a>
+            </li>
+            <li class=" ">
+              <a href="#intelligent" title="智能培优" data-toggle="collapse">
+                <em class="icon-graph"></em>
+                <span>智能培优</span>
+              </a>
+              <ul id="intelligent" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">智能培优</li>
                 <li class=" ">
-                  <a href="studyreport_overall.html" title="总体报告">
-                    <span>总体报告</span>
+                  <a href="intelligent_test.html" title="同步智测">
+                    <span>同步智测</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="studyreport_all.html" title="全部报告">
-                    <span>全部报告</span>
+                  <a href="intelligent_real.html" title="真题冲刺">
+                    <span>真题冲刺</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-heading ">
+              <span>教务管理</span>
+            </li>
+            <li class=" ">
+              <a href="datastatistics.html" title="数据统计">
+                <em class="icon-speedometer"></em>
+                <span>数据统计</span>
+              </a>
+            </li>
+            <li class=" ">
+              <a href="groupcoursemanagement.html" title="学员组课程管理">
+                <em class="icon-layers"></em>
+                <span>学员组课程管理</span>
+              </a>
+            </li>
+            <li class=" ">
+              <a href="#schoolmanagement" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学校管理</span>
+              </a>
+              <ul id="schoolmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学校管理</li>
+                <li class=" ">
+                  <a href="schoolmanagement_list.html" title="学校列表">
+                    <span>学校列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_setting.html" title="扣费设置">
+                    <span>扣费设置</span>
                   </a>
                 </li>
               </ul>
             </li>
             <li class=" ">
-              <a href="#coursemanagement" title="课程管理" data-toggle="collapse">
-                <em class="icon-graduation"></em>
-                <span>课程管理</span>
+              <a href="#teachermanagement" title="教师管理" data-toggle="collapse">
+                <em class="icon-people"></em>
+                <span>教师管理</span>
               </a>
-              <ul id="coursemanagement" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">课程管理</li>
+              <ul id="teachermanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">教师管理</li>
                 <li class=" ">
-                  <a href="coursemanagement_class.html" title="班级课程">
-                    <span>班级课程</span>
+                  <a href="teachermanagement_list.html" title="教师列表">
+                    <span>教师列表</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="coursemanagement_task.html" title="学习任务">
-                    <span>学习任务</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="coursemanagement_mode.html" title="复习模式">
-                    <span>复习模式</span>
+                  <a href="teachermanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
                   </a>
                 </li>
               </ul>
             </li>
             <li class=" ">
               <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
-                <em class="icon-people"></em>
+                <em class="icon-graduation"></em>
                 <span>学生管理</span>
               </a>
               <ul id="studentmanagement" class="nav sidebar-subnav collapse">
                 <li class="sidebar-subnav-header">学生管理</li>
                 <li class=" ">
-                  <a href="studentmanagement_list.html" title="学生列表">
-                    <span>学生列表</span>
+                  <a href="studentmanagement_unallocated.html" title="未分配学生列表">
+                    <span>未分配学生列表</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="studentmanagement_class.html" title="班级管理">
-                    <span>班级管理</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="studentmanagement_coin.html" title="学币管理">
-                    <span>学币管理</span>
-                  </a>
-                </li>
-                <li class=" ">
-                  <a href="studentmanagement_recharge.html" title="学员充值">
-                    <span>学员充值</span>
+                  <a href="studentmanagement_allocated.html" title="已分配学生列表">
+                    <span>已分配学生列表</span>
                   </a>
                 </li>
               </ul>
             </li>
             <li class=" ">
-              <a href="#exchangemanagement" title="学生兑换管理" data-toggle="collapse">
+              <a href="#mallmanagement" title="商城管理" data-toggle="collapse">
                 <em class="icon-present"></em>
-                <span>学生兑换管理</span>
+                <span>商城管理</span>
               </a>
-              <ul id="exchangemanagement" class="nav sidebar-subnav collapse">
-                <li class="sidebar-subnav-header">学生兑换管理</li>
+              <ul id="mallmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">商城管理</li>
                 <li class=" ">
-                  <a href="exchangemanagement_not.html" title="未兑换">
-                    <span>未兑换</span>
+                  <a href="mallmanagement_commodity.html" title="商品管理">
+                    <span>商品管理</span>
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="exchangemanagement_has.html" title="已兑换">
-                    <span>已兑换</span>
+                  <a href="mallmanagement_order.html" title="订单管理">
+                    <span>订单管理</span>
                   </a>
                 </li>
               </ul>
-            </li>
-            <li class=" ">
-              <a href="mall.html" title="奖励商城">
-                <em class="icon-basket"></em>
-                <span>奖励商城</span>
-              </a>
             </li>
           </ul>
         </nav>
@@ -178,11 +208,17 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          已兑换
+          初中语法-冠词-Unit1
+          <ol class="breadcrumb">
+            <li><a href="#">搞定语法</a></li>
+            <li class="active">单元</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             这里是内容
+            <a href="grammar_unit_choice.html" class="btn btn-info">选择题</a>
+            <a href="grammar_unit_fillblank.html" class="btn btn-info">填空题</a>
           </div>
         </div>
       </div>
