--- a/src/html/grammar_unit_choice.html
+++ b/src/html/grammar_unit_choice.html
@@ -1,4 +1,68 @@
-<!-- 左侧菜单 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <title>搞定语法-单选题</title>
+  <!-- build:css -->
+  <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
+  <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
+  <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
+  <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../css/app.css" id="maincss">
+  <link rel="stylesheet" href="../css/theme-e.css">
+  <!-- endbuild -->
+
+</head>
+
+<body>
+  <div class="wrapper">
+    <!-- build:head -->
+    <header class="topnavbar-wrapper">
+      <nav role="navigation" class="navbar topnavbar">
+        <div class="navbar-header">
+          <a href="#/" class="navbar-brand">
+            <div class="brand-logo">
+              <img src="../img/logo.png" alt="App Logo" class="img-responsive">
+            </div>
+            <div class="brand-logo-collapsed">
+              <img src="../img/logo-single.png" alt="App Logo" class="img-responsive">
+            </div>
+          </a>
+        </div>
+        <div class="nav-wrapper">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#" data-toggle-state="aside-collapsed" class="hidden-xs">
+                <em class="fa fa-navicon"></em>
+              </a>
+              <a href="#" data-toggle-state="aside-toggled" data-no-persist="true" class="visible-xs sidebar-toggle">
+                <em class="fa fa-navicon"></em>
+              </a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right mu-head-user">
+            <li>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+            </li>
+            <li>
+              <a href="#">
+                退出
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- endbuild -->
+
+
+    <!-- build:sidebar -->
+    <!-- 左侧菜单 -->
     <aside class="aside">
       <div class="aside-inner">
         <nav data-sidebar-anyclick-close="" class="sidebar">
@@ -137,3 +201,51 @@
         </nav>
       </div>
     </aside>
+    <!-- endbuild -->
+
+
+    <!-- 主要内容 -->
+    <section>
+      <div class="content-wrapper">
+        <div class="content-heading">
+          单选题 <span class="text-sm hidden-xs">以下为题库，可以无限添加，实际测试题会从以下题目中随机抽取6题，因此题库题目数需大于等于6题</span>
+          <ol class="breadcrumb">
+            <li><a href="#">搞定语法</a></li>
+            <li><a href="#">单元</a></li>
+            <li class="active">学后智测单选题</li>
+          </ol>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            这里是内容
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 主要内容END -->
+    
+    <!-- build:foot -->
+    <footer>
+      <span>&copy; 2018 - 智厢逢</span>
+    </footer>
+    <!-- endbuild -->
+
+
+  </div>
+
+  <!-- build:js -->
+  <!-- =============== JS ===============-->
+  <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
+  <script src="../js/vendor/jquery/dist/jquery.js"></script>
+  <script src="../js/vendor/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="../js/vendor/jQuery-Storage-API/jquery.storageapi.js"></script>
+  <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
+  <script src="../js/vendor/animo.js/animo.js"></script>
+  <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../js/app.js"></script>
+  <!-- endbuild -->
+
+
+</body>
+
+</html>
