--- a/src/html/studentmanagement_list.html
+++ b/src/html/studentmanagement_list.html
@@ -16,6 +16,10 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <!-- SWEET ALERT-->
+  <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
+
 
 </head>
 
@@ -59,6 +63,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
     <!-- build:sidebar -->
@@ -174,6 +179,7 @@
     <!-- endbuild -->
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -182,7 +188,172 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <!-- START panel-->
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">选择班级：</label>
+                      <div class="col-sm-8">
+                        <select name="" id="" class="form-control">
+                          <option value="">全部</option>
+                          <option value="1">未分班</option>
+                          <option value="2">过期学员</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-3">
+                      <label class="col-sm-4">学生手机：</label>
+                      <div class="col-sm-8">
+                        <input type="tel" name="" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-sm-1">
+                      <button type="button" class="btn btn-primary">搜索</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <!-- START table-responsive-->
+              <div class="panel-heading">
+                <div class="table-responsive">
+                  <table id="" class="table table-bordered table-hover dataTable">
+                    <thead>
+                      <tr>
+                        <th data-check-all="">
+                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
+                              <label>
+                                <input type="checkbox">
+                                <span class="fa fa-check"></span>
+                              </label>
+                          </div>
+                        </th>
+                        <th>学生手机</th>
+                        <th>姓名</th>
+                        <th>昵称</th>
+                        <th>学员组</th>
+                        <th class="sorting">有效期</th>
+                        <th class="sorting">注册日期</th>
+                        <th class="sorting">到期日期</th>
+                        <th class="sorting">当前学币</th>
+                        <th class="sorting">年级</th>
+                        <th>操作</th>
+                      </tr>
+                    </thead>
+                    <tbody id="designerlist">
+                      <tr>
+                        <td>
+                            <div class="checkbox c-checkbox">
+                              <label>
+                                <input type="checkbox">
+                                <span class="fa fa-check"></span>
+                              </label>
+                            </div>
+                          </td>
+                        <td class="text-warning">18000000000</td>
+                        <td>名字名字</td>
+                        <td>昵称昵称</td>
+                        <td>小学</td>
+                        <td class="text-danger">5天</td>
+                        <td>2015-01-21</td>
+                        <td>2015-01-21</td>
+                        <td>500</td>
+                        <td>七年级</td>
+                        <td>
+                          <a class="btn btn-primary" id="swal-demo4" href="javascript:;">修改资料</a>
+                          <a class="btn btn-primary" href="">改绑手机</a>
+                          <a class="btn btn-primary" href="">重置密码</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                            <div class="checkbox c-checkbox">
+                              <label>
+                                <input type="checkbox">
+                                <span class="fa fa-check"></span>
+                              </label>
+                            </div>
+                          </td>
+                        <td>18000000000</td>
+                        <td>名字名字</td>
+                        <td>昵称昵称</td>
+                        <td>小学</td>
+                        <td>5天</td>
+                        <td>2015-01-21</td>
+                        <td class="text-danger">2015-01-21</td>
+                        <td>500</td>
+                        <td>七年级</td>
+                        <td>
+                          <a class="btn btn-primary" href="">修改资料</a>
+                          <a class="btn btn-primary" href="">改绑手机</a>
+                          <a class="btn btn-primary" href="">重置密码</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
+                        <td>18000000000</td>
+                        <td>名字名字</td>
+                        <td>昵称昵称</td>
+                        <td>小学</td>
+                        <td>5天</td>
+                        <td>2015-01-21</td>
+                        <td>2015-01-21</td>
+                        <td>500</td>
+                        <td>七年级</td>
+                        <td>
+                          <a class="btn btn-primary" href="">修改资料</a>
+                          <a class="btn btn-primary" href="">改绑手机</a>
+                          <a class="btn btn-primary" href="">重置密码</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <a class="btn btn-primary" href="">调换班级</a>
+                </div>
+
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
+                <!-- endbuild -->
+
+
+
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -196,8 +367,11 @@
     <!-- endbuild -->
 
 
+
   </div>
 
+  <!-- SWEET ALERT-->
+  <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -209,6 +383,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  
 
 
 </body>
