--- a/src/html/05_ranking_points.html
+++ b/src/html/05_ranking_points.html
@@ -74,6 +74,7 @@
               <li class="search-name">全部</li>
             </ul>
           </div>
+          <div class="middle-table-body">
           <div class="table-head">
             <div class="table-my">
               <img src="../img/05/50.png" alt=""/>
@@ -140,6 +141,7 @@
               <li class="tr-point">36200</li>
             </ul>
           </div> 
+        </div>  
       </div>
       
     </div>
