--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -59,6 +59,7 @@
           个人中心／
           <span>个人资料</span>
         </p>
+        <div class="middle-body">
         <div class="person-head">
           <img class="user-face" src="../img/05/50.png" alt="">
           <div class="edit-list">
@@ -182,6 +183,7 @@
           </div>
           <img src="../img/07/zu62x.png" alt="" class="page-img">
 
+        </div>
         </div>
       </div>
     </div>
