--- a/src/html/30_Interactive_learn.html
+++ b/src/html/30_Interactive_learn.html
@@ -180,9 +180,9 @@
                             <form action=""></form>
                             <div class="knowlage-item">
                                 你的骄傲是的可能打死来
-                                <input class="knowlage-input" type="text" placeholder="请输入">卡的哈
-                                <input class="knowlage-input" type="text" placeholder="请输入"> 爱出发的擦擦擦
-                                <input class="knowlage-input" type="text" placeholder="请输入">
+                                <input class="knowlage-input"  type="text" placeholder="请输入">卡的哈
+                                <input class="knowlage-input true-input" type="text" placeholder="请输入"> 爱出发的擦擦擦
+                                <input class="knowlage-input false-input" type="text" placeholder="请输入">
                             </div>
                             </form>
                             <p class="knowladge-tips">提示：提示内容提示内容（错误一次触发）/解析：解析内容解析内容（正确填写后显示，替换提示）</p>
@@ -207,8 +207,51 @@
                                     <input class="regular-radio" name="qy-radio1" type="radio">
                                     <label class="radio-radio" for="">sentence4</label>
                                 </li>
+                                <button class="continue-btn">提交</button>
                                 <p class="knowladge-tips">提示：提示内容提示内容（错误一次触发）/解析：解析内容解析内容（正确填写后显示，替换提示）</p>
                             </ul>
+                            <div class="submit-result">
+                            	<ul class="questions">
+                                <p class="questions-title">题干题干题干题干题干题干题干题干题干题干题干题干  <img class="true-icon" src="../img/30/group102x.png"/></p>
+                                <li class="options">
+                                    <input class="regular-radio true-result" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence1</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio false-result" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence2</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence3</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence4</label>
+                                </li>
+                                <p class="knowladge-tips">提示：提示内容提示内容（错误一次触发）/解析：解析内容解析内容（正确填写后显示，替换提示）</p>
+                            </ul>
+                            	<ul class="questions">
+                                <p class="questions-title">题干题干题干题干题干题干题干题干题干题干题干题干  <img class="false-icon" src="../img/30/group103x.png"/> </p>
+                                <li class="options">
+                                    <input class="regular-radio true-result" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence1</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio false-result" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence2</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence3</label>
+                                </li>
+                                <li class="options">
+                                    <input class="regular-radio" disabled name="qy-radio1" type="radio">
+                                    <label class="radio-radio" for="">sentence4</label>
+                                </li>
+                                <p class="knowladge-tips">提示：提示内容提示内容（错误一次触发）/解析：解析内容解析内容（正确填写后显示，替换提示）</p>
+                            </ul>
+                            </div>
                         </div>
                     </div>
 
