--- a/src/html/05_ranking_points.html
+++ b/src/html/05_ranking_points.html
@@ -55,8 +55,8 @@
     <div class="main">
       <div class="linye-body">
           <ul class="head-tab">
-              <li class="tab-item tab-selectd">积分排行</li>
-              <li class="tab-item">军衔排行</li>
+              <li class="tab-item tab-selectd ranking-tag" name='jifen'>积分排行</li>
+              <li class="tab-item ranking-tag" name='junxian'>军衔排行</li>
           </ul>
           <div class="search-list">
             <ul class="search-item">
@@ -74,6 +74,7 @@
               <li class="search-name">全部</li>
             </ul>
           </div>
+          <section class="ranking-section jifen" >
           <div class="middle-table-body">
           <div class="table-head">
             <div class="table-my">
@@ -142,6 +143,77 @@
             </ul>
           </div> 
         </div>  
+        </section>
+          <section class="ranking-section junxian" >
+          <div class="middle-table-body">
+          <div class="table-head junxian-table-head">
+            <div class="table-my junxian-table-my">
+              <img src="../img/05/50.png" alt=""/>
+              <p class="table-my-detail">我的名次<span>123</span></p>
+              <p class="table-my-detail">军衔<span>上校</span></p>
+              <p class="table-my-detail">证书<span>456456</span></p>
+            </div>
+            <ul class="top-three">
+              <li class="top-three-litem">
+                <div class="top-three-face">
+                    <img src="../img/05/50.png" alt="" class="face-img two">
+                    <div class="points points-two">2</div>
+                </div>
+                <p class="one-nickname">博格巴</p>
+                <p class="top-three-integral">积分 <span>666</span></p>
+
+              </li>
+              <li class="top-three-litem one-item">
+              <div class="top-three-face one-face">
+                  <img src="../img/05/50.png" alt="" class="face-img one">
+                  <div class="points points-one">1</div>
+                  <img src="../img/05/shape2x.png" alt="" class="huanfgguan-icon">
+              </div>
+              <p class="one-nickname">格列兹曼</p>
+              <p class="top-three-integral">积分 <span>666</span></p>
+            </li>
+            <li class="top-three-litem">
+              <div class="top-three-face">
+                  <img src="../img/05/50.png" alt="" class="face-img three">
+                  <div class="points points-three">3</div>
+              </div>
+              <p class="one-nickname">姆巴佩</p>
+              <p class="top-three-integral">积分 <span>666</span></p>
+            </li>
+            </ul>
+          </div> 
+          <div class="ranking-table">
+            <div class="table-th">
+              <div class="table-title">积分排名</div>
+              <div class="table-title">头像</div>
+              <div class="table-title">姓名</div>
+              <div class="table-title">等级</div>
+              <div class="table-title">积分</div>
+            </div>
+            <ul class="tr">
+              <li class="tr-ranking tr-ranking-one"><img src="../img/05/group72x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
+              <li class="tr-name">格列兹曼</li>
+              <li class="tr-lv"><div class="lv">LV3</div></li>
+              <li class="tr-point">36200</li>
+            </ul>
+            <ul class="tr tr-even">
+              <li class="tr-ranking"><img src="../img/05/group82x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
+              <li class="tr-name">格列兹曼</li>
+              <li class="tr-lv"><div class="lv">LV3</div></li>
+              <li class="tr-point">36200</li>
+            </ul>
+            <ul class="tr">
+              <li class="tr-ranking"><img src="../img/05/group92x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
+              <li class="tr-name">格列兹曼</li>
+              <li class="tr-lv"><div class="lv">LV3</div></li>
+              <li class="tr-point">36200</li>
+            </ul>
+          </div> 
+        </div>  
+        </section>
       </div>
       
     </div>
