--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -68,7 +68,7 @@
             <!-- 未设置昵称图标 -->
             <img class="edit-icon" src="../img/07/rectangle2x.png" alt="">
           </div>
-          <div class="change-possword">修改密码</div>
+          <div class="change-possword"><a  href="08_change_password.html">修改密码</a></div>
         </div>
         <div class="data-detail">
           <p class="title title2">基础信息
