--- a/src/html/08_change_password.html
+++ b/src/html/08_change_password.html
@@ -73,38 +73,38 @@
             <!-- 类名progress-name-finish已经完成和正在进行的步骤名字的状态 -->
             <div class="progress-top">
               <div class="progress-item progress-item-ing">
-                1
+                <span>1</span>
                 <div class="progress-name progress-name-finish">发送验证码</div>
               </div>
               <div class="progress-line1"></div>
               <div class="progress-item">
-                2
+                 <span>2</span>
                 <div class="progress-name middle">验证手机</div>
               </div>
               <div class="progress-line1"></div>
               <div class="progress-item">
-                3
+                <span>3</span>
                 <div class="progress-name">设置新密码</div>
               </div>
             </div>
 
           </div>
-          <div class="btn-list">
+          <div class="btn-list step1">
             <input class="putin" type="number" name="" id="" placeholder="请输入您的手机号">
             <br>
-            <button class="send-btn">发送验证码到手机</button>
+            <button class="send-btn sendCode">发送验证码到手机</button>
           </div>
           <!-- 填写验证码输入框 -->
-          <!-- <div class="btn-list">
+         					<div class="btn-list step2">
                         <input class="putin" type="number" name="" id="" placeholder="请输入收到的验证码"><br>
-                        <button class="send-btn">验证</button>
-                    </div> -->
+                        <button class="send-btn testCode">验证</button>
+                    </div>
           <!-- 设置新密码 -->
-          <!-- <div class="btn-list">
+           <div class="btn-list step3">
                         <input class="putin" type="number" name="" id="" placeholder="请设置新密码"><br>
                         <input class="putin2" type="number" name="" id="" placeholder="请重复新密码"><br>
-                        <button class="send-btn">验证</button>
-                    </div> -->
+                        <button class="send-btn changeFinish">验证</button>
+                    </div> 
           <!-- 输入手机号提示 -->
           <div class="content-text">
             <p class="old-phone">旧手机号无法使用？</p>
